# compliment

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  Dockerfile  docker-compose.yml  docker.env  pyproject.toml  seed_data.json  seed_data.py  temp_file.ipynb  whatnext.md
src/: main.py
src/api/: CRUD.py  crud.py  filters.py  repository.py  routers.py  service.py
src/auth/: tokens.py
src/core/: DB.env  config.py  database.py
src/decorators/: cache_func.py  test_conn_deco.py
src/models/: comp_models.py  models.py
src/routers/: auth.py  compliments.py  users.py
src/schemas/: comp_schemas.py  schemas.py
src/scripts/: db_init.py
src/tests/: health.py  test_router.py
src/utils/: depends.py  seed_input.py
