[tool.poetry]
name = "compliment-app"
version = "0.1.0"
description = ""
authors = ["test <test@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.49"
fastapi = "^0.135.3"
dotenv = "^0.9.9"
uvicorn = "^0.46.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
